# JBroEngine

./: .gitignore  CLAUDE.md  CLAUDE.md.bak  JBroEngine.sln  LICENSE  todo.txt
.claude/: settings.json
Application/: Application.cpp  Application.h  Application.rc  Application.vcxproj  Application.vcxproj.filters  Resource.h  framework.h  pch.h  targetver.h
Application/Editor/: Editor.h  EditorComponentMenu.cpp  EditorComponentMenu.h  EditorDragDrop.cpp  EditorDragDrop.h  RootDockWindow.cpp  RootDockWindow.h
Application/Editor/Command/: EditorCommandManager.cpp  EditorCommandManager.h  EditorFileCommands.cpp  EditorFileCommands.h  EditorSceneCommands.cpp  EditorSceneCommands.h
Application/Editor/FontAssome/: FontAssomeHelper.h
Application/Editor/Helper/: EditorGuiDrawHelpers.cpp  EditorGuiDrawHelpers.h  ImGuiHelper.cpp  ImGuiHelper.h
Application/Editor/Main/: AssetBrowserTool.cpp  AssetBrowserTool.h  BuildSettingsWindow.cpp  BuildSettingsWindow.h  GameViewTool.cpp  GameViewTool.h  HierarchyTool.cpp  HierarchyTool.h  InspectorTool.cpp  InspectorTool.h  LogTool.cpp  LogTool.h  MainDockWindow.cpp  MainDockWindow.h  ProjectSettingsWindow.cpp  ProjectSettingsWindow.h  SceneViewContour.h  SceneViewEditContext.cpp  SceneViewEditContext.h  SceneViewTool.cpp  SceneViewTool.h
Application/Editor/Script/: ScriptSchema.cpp  ScriptSchema.h  ScriptSchemaWidgets.h
Application/Entry/: AndroidMain.cpp  WebMain.cpp  WindowsMain.cpp
Application/Localization/: en-US.yaml  ko-KR.yaml
BuildScripts/: BuildGame.ps1  BuildWeb.ps1  PackageEditor.ps1
BuildScripts/Android/: BuildAndroidNative.ps1  android_engine_sources.txt
BuildScripts/Web/: WebBuild.vcxproj  build_web_debug.bat  build_web_release.bat  serve_web_debug.bat  web_game_sources.txt
BuildTools/BuildManifestTool/: BuildManifestTool.cpp  BuildManifestTool.vcxproj  BuildManifestTool.vcxproj.filters
Docs/WorkNotes/: AssetBrowserMultiSelectAndCleanup.md  BuildPipelineDesign.md  EditorScriptMenuAndCleanup.md
Engine/: Engine.vcxproj  Engine.vcxproj.filters  Framework.h  StageSDK.targets  pch.h
Engine/Application/: Application.cpp  Application.h
Engine/Core/: Core.h  CoreAll.h  Engine.cpp  Engine.h  EngineContext.h  EngineCore.cpp  EngineCore.h  RuntimeConfig.h  ScriptCore.cpp  ScriptCore.h
Engine/Core/Asset/: AssetManager.cpp  AssetManager.h  AssetMetaFile.cpp  AssetMetaFile.h  AssetPackage.cpp  AssetPackage.h  AssetPath.cpp  AssetPath.h  AssetRef.inl  AssetRegistry.cpp  AssetRegistry.h  AssetTypes.h  AudioAsset.cpp  AudioAsset.h  AudioEffectAsset.cpp  AudioEffectAsset.h  FileAsset.cpp  FileAsset.h  IAsset.h  IAssetLoader.h  IAssetManager.h  IAssetRegistry.h  MaterialAsset.cpp  MaterialAsset.h  SpriteAsset.cpp  SpriteAsset.h  TextureAsset.cpp  TextureAsset.h
Engine/Core/Audio/: AudioTypes.h  IAudioBus.h  IAudioDevice.h  IAudioEffect.h  IAudioListener.h  IAudioPlayer.h
Engine/Core/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Core/Game/: GameModuleLoader.cpp  GameModuleLoader.h  GameModuleTypes.h
Engine/Core/Input/: IInputMessageHandler.h  Input.cpp  Input.h  InputAction.h  InputDevices.h  InputSystem.cpp  InputSystem.h  InputTypes.h
Engine/Core/Localization/: LocalizationManager.cpp  LocalizationManager.h
Engine/Core/Logging/: Logger.cpp  Logger.h
Engine/Core/Math/: MathService.cpp
Engine/Core/Module/: Module.cpp  Module.h
Engine/Core/Network/: INetworkManager.h  INetworkTransport.h  NetworkManager.cpp  NetworkManager.h  NetworkTypes.h
Engine/Core/Platform/: IPlatform.h  IRenderSurface.h  PlatformDefines.h  PlatformTypes.h  RenderSurfaceTypes.h
Engine/Core/RHI/: EmptyRHIDevice.cpp  EmptyRHIDevice.h  IRHIBuffer.h  IRHICommandContext.h  IRHIDevice.h  IRHIGraphicsPipeline.h  IRHIProgram.h  IRHISampler.h  IRHISwapchain.h  IRHITexture.h  RHICommandTypes.h  RHIGraphicsTypes.h  RHIResource.h  RHITypes.h
Engine/Core/Random/: RandomService.cpp  RandomService.h
Engine/Core/Renderer/: Forward2DRenderer.cpp  Forward2DRenderer.h  IRenderMesh.h  IRenderResource.h  IRenderer.h  RenderResourceCache.cpp  RenderResourceCache.h  RenderResources2D.cpp  RenderResources2D.h  RenderScene.cpp  RenderScene.h  RendererTypes.h  SpriteVulkanShaders.h
Engine/Core/Resource/: ResourceRegistry.cpp  ResourceRegistry.h
Engine/Core/Task/: Task.cpp  Task.h  TaskGroup.cpp  TaskGroup.h  TaskManager.cpp  TaskManager.h
Engine/Core/Thread/: ThreadService.cpp  ThreadService.h  ThreadTypes.h
Engine/Core/Time/: Time.cpp  Time.h
Engine/Editor/: ImEditor.cpp  ImEditor.h  ImGuiUtillity.cpp  ImGuiUtillity.h
Engine/Editor/FileSystem/: FileWatcherTypes.h  IFileWatcher.h
Engine/Engine/: EngineAPI.cpp  EngineAPI.h
Engine/GameFramework/: GameFrameworkAll.h
Engine/Utillity/: Framework.h
GameCode/: GameCode.vcxproj  GameModule.cpp  pch.h
GameCode/Scripts/: ExampleScript.cpp  ExampleScript.h
Installers/: JBroEngineEditor.iss
Localization/: LocalizationSettings.yaml  en-US.yaml  ko-KR.yaml
PlatformBuild/Android/: CMakeLists.txt  README.md
PlatformBuild/Web/: shell.html
Resources/: resources.yaml
SDK/: JBroEngine.props
SDK/Templates/: GameScript.vcxproj.template
Samples/GameScriptSample/: GameModule.cpp  GameModuleEntry.h  GameScriptApi.h  GameScriptSample.vcxproj  pch.h
Utillity/: BitFlag.cpp  Framework.h  Matrix3x2.h  RectT.cpp  SafePtr.h  SizeT.cpp  StringUtillity.cpp  Types.h  Utillities.h  Utillity.cpp  Utillity.vcxproj  Utillity.vcxproj.filters  Vector2T.cpp  Vector2T.h  pch.cpp
Utillity/File/: FileUtillities.cpp
Utillity/Memory/: AllocatorTypes.h  BlockPoolAllocator.cpp  MallocAllocator.cpp
enc_temp_folder/1fb76803460313ee3f059ed47494843/: ImEditor.cpp
tasks/: AndroidNativeBuildPlan.md  AndroidOrientationPlan.md  AudioEffectAsset.todo.md  AudioSystemReview.md  BuildPipelineDesign.md  BuildSettingsPlatformSplit.md  EffectEditorWindow.todo.md  EngineAuditFollowup.md  EngineCodeAudit.md  GuizmoArchitecture.md  InputSystemRoadmap.md  MobilePlatformPlan.md  RhiRendererParallelDevelopment.md  VulkanMobileHandoff.md  asset-system-followups.md  lessons.md  todo-followup.md  todo.md
(+328 files in other folders)
